--- a/index.html
+++ b/index.html
@@ -3,52 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <title>Learning Bootstrap</title>
-    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script
+			  src="https://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous" defer>
+    </script>
+
+    <script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer>
+    </script>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 <header>
-    <nav>
-        <a href="">Home</a>
-        <a href="">Away</a>
-        <a href="">My page</a>
-        <a href="">Contact</a>
-        <a href="">Login</a>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="row text-center">
+          <a href="" class="col-xs-4 col-md-2 col-md-offset-1">Home</a>
+          <a href="" class="col-xs-4 col-md-2">Away</a>
+          <a href="" class="col-xs-4 col-md-2">My page</a>
+          <a href="" class="col-xs-4 col-md-2">Contact</a>
+          <a href="" class="col-xs-4 col-md-2">Login</a>
+        </div>
+      </div>
     </nav>
-    <img src="https://images.unsplash.com/photo-1437941792454-bacef7a7f736?q80&fmjpg&s9d54a5c69d3ae8ba1af0554649c24aa8"
+    <div class="jumbotron">
+      <img src="https://images.unsplash.com/photo-1437941792454-bacef7a7f736?q80&fmjpg&s9d54a5c69d3ae8ba1af0554649c24aa8"
          alt="background image of water" class="masthead"/>
-    <h1>Learning Bootstrap Layouts</h1>
+      <h1 class="text-uppercase">Learning Bootstrap Layouts</h1>
+    </div>
 </header>
-<section>
-    <article>
-        <h2>Check out this awesome block of text</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus distinctio dolor eum explicabo id ipsam itaque labore, laboriosam maiores modi nemo nostrum officia provident quia repudiandae suscipit tenetur voluptates.</p>
+<section class="container">
+  <div class="row">
+    <article class="col-xs-12 col-sm-12 col-md-4 col-lg-3 ">
+        <h2 class="text-center">Check out this awesome block of text</h2>
+        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid delectus distinctio dolor eum explicabo id ipsam itaque labore, laboriosam maiores modi nemo nostrum officia provident quia repudiandae suscipit tenetur voluptates.</p>
     </article>
-    <article>
-        <h2>Block 2 is just for you</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dolor id iste nesciunt odit, sapiente similique? A debitis deleniti deserunt dolore eos officia perspiciatis quibusdam? Consequatur labore mollitia qui repellat?</p>
+    <article class="col-xs-12 col-sm-12 col-md-4 col-lg-3 col-lg-offset-1">
+        <h2 class="text-center">Block 2 is just for you</h2>
+        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dolor id iste nesciunt odit, sapiente similique? A debitis deleniti deserunt dolore eos officia perspiciatis quibusdam? Consequatur labore mollitia qui repellat?</p>
     </article>
-    <article>
-        <h2>Block three is never free</h2>
+    <article class="col-xs-12 col-sm-12 col-md-4 col-lg-3 col-lg-offset-1">
+        <h2 class="text-center">Block three is never free</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at cupiditate dolorem ea earum error explicabo labore quia saepe vero? Ab cupiditate debitis in laborum necessitatibus perferendis repudiandae similique unde?</p>
     </article>
+  </div>
 </section>
-<form >
-    <label for="exampleInputName2">Name</label>
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-    <label for="exampleInputEmail2">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
-    <button type="submit" >Send invitation</button>
-</form>
-<footer>
-    <nav>
-        <a href="">Home</a>
-        <a href="">Away</a>
-        <a href="">Contact</a>
-        <a href="">Login</a>
+<div class="container-fluid" id="form-entry">
+  <form class="text-center">
+    <div class="form-group row">
+      <div class="col-md-6 col-md-offset-3 col-xs-12">
+        <label for="exampleInputName2">Name</label>
+        <input type="text" class="form-control text-center" id="exampleInputName2" placeholder="Jane Doe">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="col-md-6 col-md-offset-3 col-xs-12">
+        <div class="form-group">
+          <label for="exampleInputEmail2">Email</label>
+          <input type="email" class="form-control text-center" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+        </div>
+      </div>
+    </div>
+      <button type="submit" class="btn btn-default">Send invitation</button>
+  </form>
+</div>
+<footer class="container-fluid text-center">
+  <div class="row">
+    <nav class="col-md-6 col-md-offset-3 col-xs-12">
+      <div class="row">
+        <a href="" class="col-xs-12 col-sm-3">Home</a>
+        <a href="" class="col-xs-12 col-sm-3">Away</a>
+        <a href="" class="col-xs-12 col-sm-3">Contact</a>
+        <a href="" class="col-xs-12 col-sm-3">Login</a>
+      </div>
     </nav>
-    <p>Copyright 2015 Some company with cool copyright message</p>
+    <p class="col-xs-12">Copyright 2015 Some company with cool copyright message</p>
+  </div>
 </footer>
 <script src="js/custom.js"></script>
 </body>
